# fireguard

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.client  Dockerfile.keycloak  Dockerfile.publisher  README.md  docker-compose.development.yml  docker-compose.yml  main.py  main_publisher.py  pyproject.toml  web_api.http
.github/workflows/: project-test-pipeline.yml
deploy/: nginx-deployment.yaml
fireguard/client/: clientprototype.py
migrations/20240225T123235_initial_migration/: down.sql  up.sql
src/: main.py
src/api/: main.py
src/api/authentication/: User.py  auth.py
src/api/authentication/keycloak/: keycloak_info.json  version.txt
src/api/requesthandler/: api_logic.py  api_server.py  buildFireguardAPI.py
src/broker/: api_client.py  publish_runner.py  publisher.py  willDelete.py
src/client/: clientprototype.py  subtest.py
src/data/: dataTypes.py
src/data/apihandler/: METClient.py  apihandler.py  frostClient.py  frostHandler.py  util.py
src/data/databasehandler/: TTFhandler.py  databaseHandler.py  mongodb.py  observationHandler.py
src/data/dataextractor/: dataExtractor.py
src/helpers/: annotations.py
src/service/: frcapi.py
src/service/TTFmodel/: TTFmodel.py  compute.py  parameters.py  preprocess.py  utils.py
src/service/datacollector/: dataCollector.py
static/: index.html  subtest.html
tests/api/: apiTest.py  test_RESTapi.py
tests/data/: apiHandlerTest.py  frostTest.py  testMet.py  test_apiHandler.py  test_databaseHandler.py  test_frost.py
tests/service/: dataCollectorTest.py
(+5 files in other folders)
