[tool.poetry]
name = "fireguard"
version = "0.1.0"
description = ""
authors = ["h593286 <593286@stud.hvl.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
python-dateutil = "^2.8.2"
pydantic = "^2.6.2"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
reloadium = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
